--- a/tinkoff-id/src/main/res/values/strings.xml
+++ b/tinkoff-id/src/main/res/values/strings.xml
@@ -19,5 +19,7 @@
 
     <!--partner auth sign in button-->
     <string name="tinkoff_id_sign_in">Sign in with Tinkoff</string>
+    <!--partner auth cashback template-->
+    <string name="tinkoff_id_cashback">%1$s%% cashback</string>
 
 </resources>
